// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with live bindings 1. export namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 2. export namespace as default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 3. export default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
const local = 'local';
var _default = local;"
`;

exports[`with live bindings 4. export default + import namespace 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _test = require('test');
var Test = _interopNamespace(_test);
test(Test);
const local = 'local';
var _default = local;"
`;

exports[`with live bindings 5. export default + import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _test = require('test');
var Test = _interopDefault(_test);
test(Test.default);
const local = 'local';
var _default = local;"
`;

exports[`with live bindings 6. export default + import named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _test = require('test');
test(_test.Test);
const local = 'local';
var _default = local;"
`;

exports[`with live bindings 7. re-export all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});"
`;

exports[`with live bindings 8. re-export all (multiple) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _androidIcons = require('android-icons');
Object.keys(_androidIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _androidIcons[k];
      }
    });
  }
});"
`;

exports[`with live bindings 9. re-export namespaces combined cases (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 10. re-export namespaces combined cases (2) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 11. re-export namespaces combined cases (3) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 12. re-export namespaces combined cases (4) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons2;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 13. re-export specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');"
`;

exports[`with live bindings 14. re-export default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 15. re-export default as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "local", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 16. re-export combined cases (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 17. re-export combined cases (2) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 18. re-export combined cases (3) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 19. re-export combined cases (4) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
var _appleIcons = require('apple-icons');
var _appleIcons2 = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 20. re-export all + namespaces 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons3;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons3;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopDefault(_appleIcons);
var _appleIcons3 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 21. re-export all multiple + namespaces 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _appleIcons2.default;
  }
});
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return _appleIcons3;
  }
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _appleIcons3;
  }
});
var _appleIcons = require('apple-icons');
Object.keys(_appleIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _appleIcons[k];
      }
    });
  }
});
var _appleIcons2 = _interopDefault(_appleIcons);
var _androidIcons = require('android-icons');
Object.keys(_androidIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _androidIcons[k];
      }
    });
  }
});
var _windowsIcons = require('windows-icons');
Object.keys(_windowsIcons).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _windowsIcons[k];
      }
    });
  }
});
var _appleIcons3 = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 22. import namespace by specifier 1`] = `
"function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
var _appleIcons = require('apple-icons');
var AppleIcons = _interopNamespace(_appleIcons);
test(AppleIcons);"
`;

exports[`with live bindings 23. import default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
test(AppleIcons.default);"
`;

exports[`with live bindings 24. import specifier 1`] = `
"var _appleIcons = require('apple-icons');
(0, _appleIcons.test)(_appleIcons.test);"
`;

exports[`with live bindings 25. import specifier as local 1`] = `
"var _appleIcons = require('apple-icons');
test(_appleIcons.test);"
`;

exports[`with live bindings 26. import default specifier as local 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);
test(local.default);"
`;

exports[`with live bindings 27. import specifier, and default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
(0, _appleIcons.test)(AppleIcons.default, _appleIcons.test);"
`;

exports[`with live bindings 28. import specifier as local, and default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
test(AppleIcons.default, _appleIcons.test);"
`;

exports[`with live bindings 29. import default specifier as local, and default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var _AppleIcons = _interopDefault(_appleIcons);
test(_AppleIcons.default, _AppleIcons.default);"
`;

exports[`with live bindings 30. import combined cases (1) 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var a = _interopDefault(_appleIcons);
test(a.default, _appleIcons.b, a.default, _appleIcons.test);"
`;

exports[`with live bindings 31. import combined cases (2) 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var a = _interopDefault(_appleIcons);
test(a.default, _appleIcons.b, a.default, _appleIcons.test);"
`;

exports[`with live bindings 32. import combined cases (3) 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var a = _interopDefault(_appleIcons);
test(a.default, _appleIcons.b, a.default, _appleIcons.test);"
`;

exports[`with live bindings 33. import combined cases (4) 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _appleIcons = require('apple-icons');
var a = _interopDefault(_appleIcons);
test(a.default, _appleIcons.b, a.default, _appleIcons.test);"
`;

exports[`with live bindings 34. export imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopNamespace(_appleIcons);"
`;

exports[`with live bindings 35. export import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons.default;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 36. export import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');"
`;

exports[`with live bindings 37. export import specifier with local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "local", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');"
`;

exports[`with live bindings 38. export import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "local", {
  enumerable: true,
  get: function () {
    return local.default;
  }
});
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 39. export import specifier and default (0) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons.default;
  }
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
(0, _appleIcons.test)(AppleIcons.default);"
`;

exports[`with live bindings 40. export import specifier and default (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons.default;
  }
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
(0, _appleIcons.test)(AppleIcons.default);"
`;

exports[`with live bindings 41. export import specifier as local, and default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons.default;
  }
});
Object.defineProperty(exports, "local", {
  enumerable: true,
  get: function () {
    return _appleIcons.test;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 42. export import default specifier as local, and default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "_AppleIcons", {
  enumerable: true,
  get: function () {
    return _AppleIcons.default;
  }
});
Object.defineProperty(exports, "local", {
  enumerable: true,
  get: function () {
    return _AppleIcons.default;
  }
});
var _appleIcons = require('apple-icons');
var _AppleIcons = _interopDefault(_appleIcons);"
`;

exports[`with live bindings 43. export-default imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopNamespace(_appleIcons);
var _default = AppleIcons;"
`;

exports[`with live bindings 44. export-default import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
var _default = AppleIcons.default;"
`;

exports[`with live bindings 45. export-default import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _appleIcons = require('apple-icons');
var _default = _appleIcons.test;"
`;

exports[`with live bindings 46. export-default import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _appleIcons = require('apple-icons');
var _default = _appleIcons.test;"
`;

exports[`with live bindings 47. export-default import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);
var _default = local.default;"
`;

exports[`with live bindings 48. export-named imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons;
  }
});
var _appleIcons = require('apple-icons');
var _AppleIcons = _interopNamespace(_appleIcons);
const AppleIcons = _AppleIcons;"
`;

exports[`with live bindings 49. export-named import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "AppleIcons", {
  enumerable: true,
  get: function () {
    return AppleIcons;
  }
});
var _appleIcons = require('apple-icons');
var _AppleIcons = _interopDefault(_appleIcons);
const AppleIcons = _AppleIcons.default;"
`;

exports[`with live bindings 50. export-named import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "_test", {
  enumerable: true,
  get: function () {
    return _test;
  }
});
var _appleIcons = require('apple-icons');
const _test = _appleIcons.test;"
`;

exports[`with live bindings 51. export-named import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return test;
  }
});
var _appleIcons = require('apple-icons');
const test = _appleIcons.test;"
`;

exports[`with live bindings 52. export-named import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "_local", {
  enumerable: true,
  get: function () {
    return _local;
  }
});
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);
const _local = local.default;"
`;

exports[`with live bindings 53. export destructured object from imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopNamespace(_appleIcons);
const {
  a,
  b
} = AppleIcons;"
`;

exports[`with live bindings 54. export destructured object from import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
const {
  a,
  b
} = AppleIcons.default;"
`;

exports[`with live bindings 55. export destructured object from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
const {
  a,
  b
} = _appleIcons.test;"
`;

exports[`with live bindings 56. export destructured object from import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
const {
  a,
  b
} = _appleIcons.test;"
`;

exports[`with live bindings 57. export destructured object from import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);
const {
  a,
  b
} = local.default;"
`;

exports[`with live bindings 58. export nested destructured object w/ rest from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
Object.defineProperty(exports, "rest", {
  enumerable: true,
  get: function () {
    return rest;
  }
});
var _appleIcons = require('apple-icons');
const {
  a,
  _b: {
    b,
    ...rest
  }
} = _appleIcons.test;"
`;

exports[`with live bindings 59. export destructured array from imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () {
        return e[k];
      }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopNamespace(_appleIcons);
const [a, b] = AppleIcons;"
`;

exports[`with live bindings 60. export destructured array from import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var AppleIcons = _interopDefault(_appleIcons);
const [a, b] = AppleIcons.default;"
`;

exports[`with live bindings 61. export destructured array from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
const [a, b] = _appleIcons.test;"
`;

exports[`with live bindings 62. export destructured array from import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
const [a, b] = _appleIcons.test;"
`;

exports[`with live bindings 63. export destructured array from import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "b", {
  enumerable: true,
  get: function () {
    return b;
  }
});
var _appleIcons = require('apple-icons');
var local = _interopDefault(_appleIcons);
const [a, b] = local.default;"
`;

exports[`with live bindings 64. import side effect 1`] = `"require('apple-icons');"`;

exports[`with live bindings 65. export-named "__proto__" export by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__proto__", {
  enumerable: true,
  get: function () {
    return __proto__;
  }
});
exports.__nonProto__ = __nonProto__;
function __proto__() {}
function __nonProto__() {}"
`;

exports[`without live bindings 1. export namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
exports.AppleIcons = _AppleIcons;"
`;

exports[`without live bindings 2. export namespace as default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_ALL('apple-icons');
exports.default = _default;"
`;

exports[`without live bindings 3. export default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
const local = 'local';
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 4. export default + import namespace 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var Test = _$$_IMPORT_ALL('test');
test(Test);
const local = 'local';
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 5. export default + import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var Test = _$$_IMPORT_DEFAULT('test');
test(Test);
const local = 'local';
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 6. export default + import named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var Test = require('test').Test;
test(Test);
const local = 'local';
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 7. re-export all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}"
`;

exports[`without live bindings 8. re-export all (multiple) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
var _androidIcons = require('android-icons');
for (var _key2 in _androidIcons) {
  exports[_key2] = _androidIcons[_key2];
}"
`;

exports[`without live bindings 9. re-export namespaces combined cases (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _default = _$$_IMPORT_ALL('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
exports.AppleIcons = _AppleIcons;
exports.default = _default;"
`;

exports[`without live bindings 10. re-export namespaces combined cases (2) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _default = _$$_IMPORT_ALL('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
exports.AppleIcons = _AppleIcons;
exports.default = _default;"
`;

exports[`without live bindings 11. re-export namespaces combined cases (3) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_ALL('apple-icons');
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
exports.default = _default;
exports.AppleIcons = _AppleIcons;"
`;

exports[`without live bindings 12. re-export namespaces combined cases (4) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_ALL('apple-icons');
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
exports.default = _default;
exports.AppleIcons = _AppleIcons;"
`;

exports[`without live bindings 13. re-export specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _test = require('apple-icons').test;
exports.test = _test;"
`;

exports[`without live bindings 14. re-export default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_DEFAULT('apple-icons');
exports.default = _default;"
`;

exports[`without live bindings 15. re-export default as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_DEFAULT('apple-icons');
exports.local = _default;"
`;

exports[`without live bindings 16. re-export combined cases (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_DEFAULT('apple-icons');
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
var _test = require('apple-icons').test;
exports._test = _default;
exports.test = _test;
exports.default = _default2;"
`;

exports[`without live bindings 17. re-export combined cases (2) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = _$$_IMPORT_DEFAULT('apple-icons');
var _test = require('apple-icons').test;
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
exports._test = _default;
exports.test = _test;
exports.default = _default2;"
`;

exports[`without live bindings 18. re-export combined cases (3) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _test = require('apple-icons').test;
var _default = _$$_IMPORT_DEFAULT('apple-icons');
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
exports.test = _test;
exports._test = _default2;
exports.default = _default;"
`;

exports[`without live bindings 19. re-export combined cases (4) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _test = require('apple-icons').test;
var _default = _$$_IMPORT_DEFAULT('apple-icons');
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
exports.test = _test;
exports._test = _default;
exports.default = _default2;"
`;

exports[`without live bindings 20. re-export all + namespaces 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _default = _$$_IMPORT_ALL('apple-icons');
var _test = require('apple-icons').test;
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
exports.AppleIcons = _AppleIcons;
exports.default = _default;
exports.test = _test;
exports._test = _default2;"
`;

exports[`without live bindings 21. re-export all multiple + namespaces 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _default = _$$_IMPORT_ALL('apple-icons');
var _test = require('apple-icons').test;
var _default2 = _$$_IMPORT_DEFAULT('apple-icons');
var _appleIcons = require('apple-icons');
for (var _key in _appleIcons) {
  exports[_key] = _appleIcons[_key];
}
var _androidIcons = require('android-icons');
for (var _key2 in _androidIcons) {
  exports[_key2] = _androidIcons[_key2];
}
var _windowsIcons = require('windows-icons');
for (var _key3 in _windowsIcons) {
  exports[_key3] = _windowsIcons[_key3];
}
exports.AppleIcons = _AppleIcons;
exports.default = _default;
exports.test = _test;
exports._test = _default2;"
`;

exports[`without live bindings 22. import namespace by specifier 1`] = `
"var AppleIcons = _$$_IMPORT_ALL('apple-icons');
test(AppleIcons);"
`;

exports[`without live bindings 23. import default 1`] = `
"var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
test(AppleIcons);"
`;

exports[`without live bindings 24. import specifier 1`] = `
"var test = require('apple-icons').test;
test(test);"
`;

exports[`without live bindings 25. import specifier as local 1`] = `
"var local = require('apple-icons').test;
test(local);"
`;

exports[`without live bindings 26. import default specifier as local 1`] = `
"var local = _$$_IMPORT_DEFAULT('apple-icons');
test(local);"
`;

exports[`without live bindings 27. import specifier, and default 1`] = `
"var test = require('apple-icons').test;
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
test(AppleIcons, test);"
`;

exports[`without live bindings 28. import specifier as local, and default 1`] = `
"var local = require('apple-icons').test;
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
test(AppleIcons, local);"
`;

exports[`without live bindings 29. import default specifier as local, and default 1`] = `
"var _AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
var local = _$$_IMPORT_DEFAULT('apple-icons');
test(_AppleIcons, local);"
`;

exports[`without live bindings 30. import combined cases (1) 1`] = `
"var _appleIcons = require('apple-icons'),
  b = _appleIcons.b,
  d = _appleIcons.test;
var a = _$$_IMPORT_DEFAULT('apple-icons');
var c = _$$_IMPORT_DEFAULT('apple-icons');
test(a, b, c, d);"
`;

exports[`without live bindings 31. import combined cases (2) 1`] = `
"var _appleIcons = require('apple-icons'),
  b = _appleIcons.b,
  d = _appleIcons.test;
var a = _$$_IMPORT_DEFAULT('apple-icons');
var c = _$$_IMPORT_DEFAULT('apple-icons');
test(a, b, c, d);"
`;

exports[`without live bindings 32. import combined cases (3) 1`] = `
"var _appleIcons = require('apple-icons'),
  d = _appleIcons.test,
  b = _appleIcons.b;
var a = _$$_IMPORT_DEFAULT('apple-icons');
var c = _$$_IMPORT_DEFAULT('apple-icons');
test(a, b, c, d);"
`;

exports[`without live bindings 33. import combined cases (4) 1`] = `
"var _appleIcons = require('apple-icons'),
  d = _appleIcons.test,
  b = _appleIcons.b;
var a = _$$_IMPORT_DEFAULT('apple-icons');
var c = _$$_IMPORT_DEFAULT('apple-icons');
test(a, b, c, d);"
`;

exports[`without live bindings 34. export imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_ALL('apple-icons');
exports.AppleIcons = AppleIcons;"
`;

exports[`without live bindings 35. export import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
exports.AppleIcons = AppleIcons;"
`;

exports[`without live bindings 36. export import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
exports.test = test;"
`;

exports[`without live bindings 37. export import specifier with local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
exports.local = local;"
`;

exports[`without live bindings 38. export import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = _$$_IMPORT_DEFAULT('apple-icons');
exports.local = local;"
`;

exports[`without live bindings 39. export import specifier and default (0) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
test(AppleIcons);
exports.AppleIcons = AppleIcons;
exports.test = test;"
`;

exports[`without live bindings 40. export import specifier and default (1) 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
test(AppleIcons);
exports.AppleIcons = AppleIcons;
exports.test = test;"
`;

exports[`without live bindings 41. export import specifier as local, and default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
exports.AppleIcons = AppleIcons;
exports.local = local;"
`;

exports[`without live bindings 42. export import default specifier as local, and default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
var local = _$$_IMPORT_DEFAULT('apple-icons');
exports._AppleIcons = _AppleIcons;
exports.local = local;"
`;

exports[`without live bindings 43. export-default imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_ALL('apple-icons');
var _default = AppleIcons;
exports.default = _default;"
`;

exports[`without live bindings 44. export-default import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
var _default = AppleIcons;
exports.default = _default;"
`;

exports[`without live bindings 45. export-default import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
var _default = test;
exports.default = _default;"
`;

exports[`without live bindings 46. export-default import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 47. export-default import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = _$$_IMPORT_DEFAULT('apple-icons');
var _default = local;
exports.default = _default;"
`;

exports[`without live bindings 48. export-named imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_ALL('apple-icons');
const AppleIcons = _AppleIcons;
exports.AppleIcons = AppleIcons;"
`;

exports[`without live bindings 49. export-named import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
const AppleIcons = _AppleIcons;
exports.AppleIcons = AppleIcons;"
`;

exports[`without live bindings 50. export-named import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
const _test = test;
exports._test = _test;"
`;

exports[`without live bindings 51. export-named import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
const test = local;
exports.test = test;"
`;

exports[`without live bindings 52. export-named import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = _$$_IMPORT_DEFAULT('apple-icons');
const _local = local;
exports._local = _local;"
`;

exports[`without live bindings 53. export destructured object from imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_ALL('apple-icons');
const {
  a,
  b
} = AppleIcons;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 54. export destructured object from import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
const {
  a,
  b
} = AppleIcons;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 55. export destructured object from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
const {
  a,
  b
} = test;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 56. export destructured object from import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
const {
  a,
  b
} = local;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 57. export destructured object from import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = _$$_IMPORT_DEFAULT('apple-icons');
const {
  a,
  b
} = local;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 58. export nested destructured object w/ rest from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
const {
  a,
  _b: {
    b,
    ...rest
  }
} = test;
exports.a = a;"
`;

exports[`without live bindings 59. export destructured array from imported namespace by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_ALL('apple-icons');
const [a, b] = AppleIcons;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 60. export destructured array from import default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var AppleIcons = _$$_IMPORT_DEFAULT('apple-icons');
const [a, b] = AppleIcons;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 61. export destructured array from import specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = require('apple-icons').test;
const [a, b] = test;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 62. export destructured array from import specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = require('apple-icons').test;
const [a, b] = local;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 63. export destructured array from import default specifier as local 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var local = _$$_IMPORT_DEFAULT('apple-icons');
const [a, b] = local;
exports.a = a;
exports.b = b;"
`;

exports[`without live bindings 64. import side effect 1`] = `"require('apple-icons');"`;

exports[`without live bindings 65. export-named "__proto__" export by specifier 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function __proto__() {}
function __nonProto__() {}
exports.__proto__ = __proto__;
exports.__nonProto__ = __nonProto__;"
`;
